--- a/service.html
+++ b/service.html
@@ -40,7 +40,7 @@
                 </adress>
             </div>
         </header>
-        <main class="main-content">
+        <div class="main-content">
             <div class="container clearfix">
                 <div class="main-section">
                     <ul class="breadcrumbs">
@@ -54,88 +54,90 @@
                            </span>
                         </li>
                     </ul>
-                    <h1 class="title">Услуги</h1>
-                    <ul class="services">
-                        <li class="services__item">
-                            <div class="services__photo">
-                                <img src="images/cycle.png" class="services__photo-png">
-                            </div>
-                            <div class="services-desc">
-                                <div class="services__name">
-                                    Фитнес
+                    <main>
+                        <h1 class="title">Услуги</h1>
+                        <ul class="services">
+                            <li class="services__item">
+                                <div class="services__photo">
+                                    <img src="images/cycle.png" class="services__photo-png">
                                 </div>
-                                <div class="services__content">
-                                    Фитнес - это основное направление в нашем центре. Открыто 6 залов для занятий с 7-00 до 22-00. Работают 24 фитнес-тренера, есть авторские и классические программы для похудения, восстановления фигуры, здоровья и молодости. Занятия с персональным тренером помогут достичь максимального результата в сжатые сроки.
+                                <div class="services-desc">
+                                    <div class="services__name">
+                                        Фитнес
+                                    </div>
+                                    <div class="services__content">
+                                        Фитнес - это основное направление в нашем центре. Открыто 6 залов для занятий с 7-00 до 22-00. Работают 24 фитнес-тренера, есть авторские и классические программы для похудения, восстановления фигуры, здоровья и молодости. Занятия с персональным тренером помогут достичь максимального результата в сжатые сроки.
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="services__item">
-                            <div class="services__photo">
-                                <img src="images/apple.png" class="services__photo-png">
-                            </div>
-                            <div class="services-desc">
-                                <div class="services__name">
-                                    Личный диетолог
+                            </li>
+                            <li class="services__item">
+                                <div class="services__photo">
+                                    <img src="images/apple.png" class="services__photo-png">
                                 </div>
-                                <div class="services__content">
-                                    Поможет вам получить более заметный результат от тренировок. Создаст меню на каждый день, с учетом вкусовых предпочтений и особенностей здоровья. Проанализирует текущий рацион и укажет на ошибки. Поможет сделать питание разнообразным и полезным, объяснит доступно о важной роли тех или иных витаминов и микроэлементов.
+                                <div class="services-desc">
+                                    <div class="services__name">
+                                        Личный диетолог
+                                    </div>
+                                    <div class="services__content">
+                                        Поможет вам получить более заметный результат от тренировок. Создаст меню на каждый день, с учетом вкусовых предпочтений и особенностей здоровья. Проанализирует текущий рацион и укажет на ошибки. Поможет сделать питание разнообразным и полезным, объяснит доступно о важной роли тех или иных витаминов и микроэлементов.
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="services__item">
-                            <div class="services__photo">
-                                <img src="images/yoga.png" class="services__photo-png">
-                            </div>
-                            <div class="services-desc">
-                                <div class="services__name">
-                                    Йога
+                            </li>
+                            <li class="services__item">
+                                <div class="services__photo">
+                                    <img src="images/yoga.png" class="services__photo-png">
                                 </div>
-                                <div class="services__content">
-                                    Гармония души и тела – это базовая составляющая здоровья и красоты. Наш зал для занятий йоги открыт для людей всех возрастов без ограничений. Отдельным направлением является йога для беременных с более щадящей программой. Йога тренеры имеют сертификаты и являются победителями международных конкурсов..
+                                <div class="services-desc">
+                                    <div class="services__name">
+                                        Йога
+                                    </div>
+                                    <div class="services__content">
+                                        Гармония души и тела – это базовая составляющая здоровья и красоты. Наш зал для занятий йоги открыт для людей всех возрастов без ограничений. Отдельным направлением является йога для беременных с более щадящей программой. Йога тренеры имеют сертификаты и являются победителями международных конкурсов..
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="services__item">
-                            <div class="services__photo">
-                                <img src="images/tpx.png" class="services__photo-png">
-                            </div>
-                            <div class="services-desc">
-                                <div class="services__name">
-                                    Петли ТРХ
+                            </li>
+                            <li class="services__item">
+                                <div class="services__photo">
+                                    <img src="images/tpx.png" class="services__photo-png">
                                 </div>
-                                <div class="services__content">
-                                    Новое направление для нашего центра, которое стало одним из самых популярных и востребованных. Программа TRX Suspension Training создана для людей с начальным уровнем подготовки и позволяет эффективно тренироваться, используя нарастающую нагрузку, которая зависит от силы и массы человека. Петли усиливают ловкость, гибкость и подвижность. В нашем центре проводятся индивидуальные и групповые тренировки ТРХ.
+                                <div class="services-desc">
+                                    <div class="services__name">
+                                        Петли ТРХ
+                                    </div>
+                                    <div class="services__content">
+                                        Новое направление для нашего центра, которое стало одним из самых популярных и востребованных. Программа TRX Suspension Training создана для людей с начальным уровнем подготовки и позволяет эффективно тренироваться, используя нарастающую нагрузку, которая зависит от силы и массы человека. Петли усиливают ловкость, гибкость и подвижность. В нашем центре проводятся индивидуальные и групповые тренировки ТРХ.
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="services__item">
-                            <div class="services__photo">
-                                <img src="images/crossfit.png" class="services__photo-png">
-                            </div>
-                            <div class="services-desc">
-                                <div class="services__name">
-                                    Кроссфит
+                            </li>
+                            <li class="services__item">
+                                <div class="services__photo">
+                                    <img src="images/crossfit.png" class="services__photo-png">
                                 </div>
-                                <div class="services__content">
-                                    Авторская запатентованная программа тренировки, включающая элементы тяжелой атлетики, занятий с гирями, гимнастики. Данная программа безупречно подходит для ежедневных тренировок людям с сидячим образом жизни. Преимущество кроссфита в том, что он одинаково хорошо воспринимается и мужчинами, и женщинами и подходит для семейных групповых тренировок. Высокая эффективности программы обусловлена чуткими рекомендациями наших сертифицированных тренеров.
+                                <div class="services-desc">
+                                    <div class="services__name">
+                                        Кроссфит
+                                    </div>
+                                    <div class="services__content">
+                                        Авторская запатентованная программа тренировки, включающая элементы тяжелой атлетики, занятий с гирями, гимнастики. Данная программа безупречно подходит для ежедневных тренировок людям с сидячим образом жизни. Преимущество кроссфита в том, что он одинаково хорошо воспринимается и мужчинами, и женщинами и подходит для семейных групповых тренировок. Высокая эффективности программы обусловлена чуткими рекомендациями наших сертифицированных тренеров.
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="services__item">
-                            <div class="services__photo">
-                                <img src="images/pool.png" class="services__photo-png">
-                            </div>
-                            <div class="services-desc">
-                                <div class="services__name">
-                                    Бассейн
+                            </li>
+                            <li class="services__item">
+                                <div class="services__photo">
+                                    <img src="images/pool.png" class="services__photo-png">
                                 </div>
-                                <div class="services__content">
-                                    Большой 50 метровый бассейн, разделенный на 6 дорожек, позволит заниматься индивидуальным плаванием или аквааэробикой. Занятия проводит сертифицированный тренер – Ситник Ирина Валерьевна, известная своими успехами в школе подготовки олимпийского резерва. В бассейне есть место для занятий с детьми (ежедневно с 12-00 до 14-00), а также проводится аквааэробика для беременных каждый день в 10-00 и 19-00.
+                                <div class="services-desc">
+                                    <div class="services__name">
+                                        Бассейн
+                                    </div>
+                                    <div class="services__content">
+                                        Большой 50 метровый бассейн, разделенный на 6 дорожек, позволит заниматься индивидуальным плаванием или аквааэробикой. Занятия проводит сертифицированный тренер – Ситник Ирина Валерьевна, известная своими успехами в школе подготовки олимпийского резерва. В бассейне есть место для занятий с детьми (ежедневно с 12-00 до 14-00), а также проводится аквааэробика для беременных каждый день в 10-00 и 19-00.
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                    </ul>
+                            </li>
+                        </ul>
                 </div>
+                </main>
                 <nav class="sidebar__menu">
                     <ul class="sidebar__menu-list">
                         <li class="sidebar__menu-item">
@@ -162,7 +164,7 @@
                     </ul>
                 </nav>
             </div>
-        </main>
+        </div>
     </div>
     <footer class="footer">
         <div class="container clearfix">
